2023-10-07T00:27:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6437765284 # 1229
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 94 281 / 99 287
* notice: next accum: outdated-unq outdated-all / unq all: 94 281 / 100 288
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-06]

2023-10-06T16:07:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6433942420 # 1228
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-06
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 94 281 / 98 286
* notice: next accum: outdated-unq outdated-all / unq all: 94 281 / 99 287
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-06]

2023-10-03T00:28:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6387054305 # 1217
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 94 281 / 98 285
* notice: next accum: outdated-unq outdated-all / unq all: 94 281 / 98 286
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-02]

2023-10-02T16:07:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6382609449 # 1216