@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-07T00:27:44Z",
-  "count_outdated" : 281,
-  "uniques_outdated" : 94,
+  "timestamp" : "2023-10-10T16:07:42Z",
+  "count_outdated" : 282,
+  "uniques_outdated" : 95,
   "count" : 288,
   "uniques" : 100,
   "views" : [
-    {
-      "timestamp": "2023-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 1,
