@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 6,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2023-09-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 1,
