@@ -1,3 +1,12 @@
+2023-10-10T16:07:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6471920975 # 1240
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
+* notice: last 14d: unq all: 5 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 94 281 / 100 288
+* notice: next accum: outdated-unq outdated-all / unq all: 95 282 / 100 288
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-26] / []
+
 2023-10-07T00:27:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6437765284 # 1229
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-07
